[project]
name = "instagram-rss"
version = "0.1.0"
description = "FastAPI RSS Feed Generator for an Instagram User"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "curl-cffi>=0.7.4",
    "fastapi>=0.115.6",
    "feedgen>=1.0.0",
    "global-logger>=0.4.2",
    "instaloader>=4.14.1",
    "pendulum>=3.0.0",
    "pydantic>=2.10.4",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "ratelimit>=2.2.1",
    "setuptools>=75.8.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
]
