[project]
name = "instagram-rss"
version = "0"
description = "FastAPI RSS Feed Generator for an Instagram User"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "curl-cffi>=0.10.0b1",
    "fastapi>=0.135.3",
    "feedgen>=1.0.0",
    "global-logger>=0.4.3",
    "instaloader>=4.14.1",
    "pydantic>=2.10.4",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "ratelimit>=2.2.1",
    "setuptools>=78.1.1",
    "tzdata>=2026.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.9.9",
]
