[project]
name = "instagram-rss"
version = "0"
description = "FastAPI RSS Feed Generator for an Instagram User"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "aiocache[redis]",
    "curl-cffi",
    "fastapi",
    "feedgen",
    "global-logger",
    "instaloader",
    "pydantic",
    "pyotp",
    "python-dotenv",
    "ratelimit",
    "setuptools",
    "tzdata",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
